crates/tests/libs/bindgen/data/error/use_glob_unresolved_type/input.rdl

use Other::*;

#[winrt]
mod Test {
    struct Thing {
        a: NoSuchType,
    }
}

#[winrt]
mod Other {
    struct ExistingThing {}
}
        